--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "prefer-const": "off",
     "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/no-empty-object-type": "off",
+    "react-hooks/rules-of-hooks": "off",
     "no-var": "off"
   }
 }
